# vulkan-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cat.cmake  debug.sh  main.c  meson.build  meson.build.vulkan
shaders/: gradient.comp  triangle.vert
src/: app.h  backtrace.c  backtrace.h  ccomexample.c  ccomexample.h  config.h.in  fake_main.c  game.h  glfwmain.c  main.c  main.h  render.c  render.h  render2.c  render2.h  render_functions.c  render_functions.h  render_util.c  render_util.h  segfault.c  shader.c  shader.h  test.c  util.h  winmain.c  winmain.h
src/render/: context.h  device.c  functions.c  functions.h  image.c  instance.c  loop.c  memory.c  shader.c  swapchain.c  util.c  util.h  wayland.c  wayland.h  win32.c  win32.h
src/render2/: context.h  device.c  image.c  instance.c  loop.c  swapchain.c  util.c  util.h  wayland.c  win32.c  win32.h
src/util/: backtrace.c  backtrace.h  memory.c  memory.h  stack.c  utf.c  utf.h  utf16.c  utf8.c  utf8.h  uuid.c  uuid.h
subprojects/Vulkan-ValidationLayers/: CMakeLists.txt
subprojects/volk/: CMakeLists.txt
test/: CMakeLists.txt  init.c  wayland.c
test/experiment/: exp1.c  image.c
test/unity/: CMakeLists.txt
test/util/: memory.c  utf16.c  utf8.c  utf_testing.h  uuid.c
